--- a/motion/templates/bits/compose_form.html
+++ b/motion/templates/bits/compose_form.html
@@ -6,15 +6,12 @@
                 <input type="hidden" id="compose-class" name="post_type" value="{{ form.post_type.data|default:"post" }}" />
                 <input type="hidden" name="redirect_to" value="{{ upload_complete_endpoint }}" />
                 <input type="hidden" id="compose-asset" name="asset" value="" />
-                {% if not settings.use_dwim %}
                 <ul id="entry-types">
                     {% for type in settings.post_types %}
                     <li id="entry-{{ type.id }}"><a href="#" title="{{ type.label }}">{{ type.label }}</a></li>
                     {% endfor %}
                 </ul>
-                {% endif %}
                 <div id="entry-fields">
-                    {% if not settings.use_dwim %}
                     <p id="compose-prompt-post">{% trans "Add a post!" %}</p>
                     <p id="compose-prompt-link">{% trans "Add a link!" %}</p>
                     <p id="compose-prompt-photo">{% trans "Add a photo!" %}</p>
@@ -38,42 +35,22 @@
                         {% if form.errors.embed %}<div class="form-error">{{ form.errors.embed|join:" " }}</div>{% endif %}
                         {{ form.embed }}
                     </div><!-- end #field-embed -->
-                    {% endif %}
                     <div id="field-body" class="field">
-                        {% if settings.use_dwim %}
-                        <div id="dwim-tip">
-                            {% blocktrans %}Start entering stuff and the right thing happens. It's <em><strong>magical</strong></em>! <a href="#" target="_blank">Learn more...</a>{% endblocktrans %}
-                            <span id="dwim-tip-bottom"></span>
-                        </div>
-                        {% endif %}
                         {% if form.errors.body %}<div class="form-error">{{ form.errors.body|join:" " }}</div>{% endif %}
                         {{ form.body }}
                     </div><!-- end #field-body -->
-                    {% if settings.use_dwim or settings.use_titles %}
+                    {% if settings.use_titles %}
                     <div id="entry-fields-optional">
                         <div id="field-title" class="field">
                             {% if form.errors.title %}<div class="form-error">{{ form.errors.title|join:" " }}</div>{% endif %}
                             {{ form.title }}
                         </div>
-                        {% if settings.use_dwim %}
-                        <div id="field-file" class="field">
-                            <label for="compose-file">{% trans "Attach a file" %}</label>
-                            {% if form.errors.file %}<div class="form-error">{{ form.errors.file|join:" " }}</div>{% endif %}
-                            {{ form.file }}<br />
-                            <em>{% trans "Only MP3, GIF, JPEG and PNG files types are supported." %}</em>
-                        </div><!-- end #field-file -->
-                        {% endif %}
                     </div><!-- end #entry-fields-optional -->
                     {% endif %}
                 </div>
                 <p class="submit-wrapper">
-                    {% if settings.use_dwim %}
-                    <a href="#more-options" id="more-options" class="more-options">{% trans "+ more options" %}</a>
-                    <a href="#live-preview" id="live-preview" class="live-preview">{% trans "+ live preview" %}</a>
-                    {% else %}
                     {% if settings.use_titles %}
                     <a href="#more-options" id="more-options" class="more-options">{% trans "+ more options" %}</a>
-                    {% endif %}
                     {% endif %}
                     <button type="submit" id="post-submit" name="post" value="Post">{% trans "Post" %}</button>
                     <button id="post-submit-posting" class="posting" name="posting" value="Posting" disabled="true">{% trans "Posting..." %}</button>
