Logout -> Sign out.

--- a/motion/templates/motion/base/widgets/signin.html
+++ b/motion/templates/motion/base/widgets/signin.html
@@ -11,7 +11,7 @@
             <span class="separator">|</span>
             <a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a>
             <span class="separator">|</span>
-            <a href="{% url logout %}">{% trans "Logout" %}</a>
+            <a href="{% url logout %}">{% trans "Sign out" %}</a>
         {% endif %}
     </div><!-- end .widget-content#signin-widget-content -->
 </div><!-- end .widget.widget-sign-in -->
