--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -1480,6 +1480,11 @@ button.button-delete {
     white-space: nowrap;
 }
 
+.members-list .hint-following {
+    font-style: italic;
+    text-align: center;
+}
+
 /* Profile ---------------------------------------------------------------- */
 
 .user-profile #page-title {
