--- a/motion/templates/motion/base/widgets/typepad_frame.html
+++ b/motion/templates/motion/base/widgets/typepad_frame.html
@@ -1,1 +1,5 @@
-<iframe src="{{ member.typepad_frame_url }}" width="300" height="125" frameborder="0" scrolling="no"></iframe>
+<div class="widget widget-typepad-frame pkg">
+  <div class="widget-content">
+    <iframe src="{{ member.typepad_frame_url }}" width="300" height="125" frameborder="0" scrolling="no"></iframe>
+  </div>
+</div>
