Added styling rule to address moderate borkage of member listing.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -1455,6 +1455,9 @@ button.button-delete {
     margin-bottom: 20px;
     min-height: 68px;
 }
+.member-listitem.first {
+    clear: left;
+}
 .member-listitem .userpic {
     margin-left: 5px;
     margin-top: 10px;
