--- a/motion/templates/motion/base/bits/member_page_item.html
+++ b/motion/templates/motion/base/bits/member_page_item.html
@@ -1,4 +1,4 @@
-<li class="member-listitem {% cycle '' 'even' %}">
+<li class="member-listitem {% cycle '' 'even' %}{% ifequal column '1' %} first{% endifequal %}">
     <div class="userpic">
         {% with member as user %}
             {% include "motion/assets/bits/userpic.html" %}
