--- a/motion/templates/motion/base/base.html
+++ b/motion/templates/motion/base/base.html
@@ -16,6 +16,7 @@
         <div id="container-inner">
 
             {% include "motion/banners/header.html" %}
+            {% include "motion/bits/flash.html" %}
 
             <div id="content" class="design-content-border design-content-font design-content-color">
                 <div id="content-inner">
