Draw from post content for a permalink page title (specifically for the 'title' tag) if no title is actually available.

--- a/motion/templates/motion/base/permalink.html
+++ b/motion/templates/motion/base/permalink.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load generic_filters %}
 
-{% block head_title %}{{ block.super }}{% if entry.title %}: {{ entry.title }}{% endif %}{% endblock %}
+{% block head_title %}{{ block.super }}{% if entry.title %}: {{ entry.title }}{% else %}{% if entry.content %}: {{ entry.content|striptags|truncatechars:40 }}{% endif %}{% endif %}{% endblock %}
 
 {% block html_head %}
 {{ block.super }}
