--- a/motion/templates/motion/base/assets/body/base.html
+++ b/motion/templates/motion/base/assets/body/base.html
@@ -5,10 +5,10 @@
 {% block title %}
     {% if entry.title %}{% spaceless %}
         {% if entry.source %}
-            <h2><a href="{{ entry.get_absolute_url }}">{% autoescape off %}{{ entry.title|striptags }}{% endautoescape %}</a></h2>
+            <h2 class="entry-title"><a href="{{ entry.get_absolute_url }}">{% autoescape off %}{{ entry.title|striptags }}{% endautoescape %}</a></h2>
         {% else %}
             {% if settings.use_titles %}
-            <h2><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h2>
+            <h2 class="entry-title"><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h2>
             {% endif %}
         {% endif %}
     {% endspaceless %}{% endif %}
