--- a/motion/templates/motion/base/bits/event_list.html
+++ b/motion/templates/motion/base/bits/event_list.html
@@ -4,7 +4,7 @@
 {% endwith %}
 {% endif %}
 
-<ul>
+<ul class="hfeed">
 {% for event in events %}{% with event.object as entry %}
     {% include "motion/assets/asset.html" %}
 {% endwith %}{% endfor %}
