--- a/motion/templates/motion/base/assets/body/photo.html
+++ b/motion/templates/motion/base/assets/body/photo.html
@@ -3,18 +3,23 @@
 
 {% block media %}
 <div>
+    {# select the 500-wide photo since that is a standard size made available #}
+    {% with entry.links.rel__enclosure.width__500 as thumbnail %}
+    {% spaceless %}
     <a href="{{ entry.get_absolute_url }}">
-    {% with entry.links.rel__enclosure.width__460 as thumbnail %}
+        {# This bit is necessary for IE6, who doesn't respect max-width CSS rules. #}
         {% if thumbnail.width|greaterthan:460 %}
         <img class="constrained" width="460" src="{{ thumbnail.href }}" alt="{{ entry.title }}" />
         {% else %}
         <img width="{{ thumbnail.width }}" height="{{ thumbnail.height }}" src="{{ thumbnail.href }}" alt="{{ entry.title }}" />
         {% endif %}
-        {% ifnotequal entry.link thumbnail.href %}
-        <br /><small><a href="{{ entry.link }}">original</a></small>
-        {% endifnotequal %}
-    {% endwith %}
     </a>
+    {% endspaceless %}
+    {% ifnotequal entry.link thumbnail.href %}
+    {# provide a link to the original resolution #}
+    <br /><small><a href="{{ entry.link }}">original</a></small>
+    {% endifnotequal %}
+    {% endwith %}
 </div>
 {% endblock %}
 
