--- a/motion/templates/motion/base/assets/body/link.html
+++ b/motion/templates/motion/base/assets/body/link.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     {% if not settings.use_titles %}
-    <h2><a href="{{ entry.link }}">{{ entry.link|truncatechars:settings.link_title_length }}</a></h2>
+    <h2 class="entry-title"><a href="{{ entry.link }}">{{ entry.link|truncatechars:settings.link_title_length }}</a></h2>
     {% endif %}
     {{ block.super }}
 {% endblock %}
