--- a/motion/templates/motion/base/assets/comment.html
+++ b/motion/templates/motion/base/assets/comment.html
@@ -13,7 +13,9 @@
         {% endwith %}
 
         <div class="comment-content-inner">
-            {{ comment.content|urlize|linebreaks }}
+            {% with comment as entry %}
+            {% include "motion/assets/bits/content.html" %}
+            {% endwith %}
         </div>
     </div>
     <div class="comment-footer">
@@ -29,6 +31,7 @@
                 <span class="vcard author">
                     <a title="{{ comment.author.get_absolute_url }}" href="{{ comment.author.get_absolute_url }}">{{ comment.author.display_name }}</a>
                 </span>
+                <span class="separator">|</span>
                 <abbr class="published" title="{{ comment.published|date_microformat }}">{{ comment.published|pithy_timesince }}</abbr>
             </span>
         </div>
