Adding hfeed class.

--- a/motion/templates/motion/base/permalink.html
+++ b/motion/templates/motion/base/permalink.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block content_body %}
-    <div class="actions">
+    <div class="actions hfeed">
         <ul>
         {% include "motion/assets/asset.html" %}
         </ul>
