--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -373,7 +373,6 @@ p {
 /* Main Index ------------------------------------------------------------- */
 
 #authenticate {
-    /*display: none;*/
     background: #F1F7FB;
     margin-bottom: 15px;
     padding: 15px;
@@ -402,7 +401,6 @@ p {
     -moz-border-radius-topright: 4px;
     -webkit-border-top-right-radius: 4px;
     -webkit-border-top-left-radius: 4px;
-/*    padding: 10px 20px 10px 20px;*/
 }
 #user-compose-friends-inner {
     margin-top: 10px;
@@ -414,9 +412,6 @@ p {
 }
 .group-events #user-compose-friends-inner {
     margin-bottom: 10px;
-}
-#featured-member-compose {
-    /* margin: 20px 0 20px 10px; */
 }
 #user-username {
     font-size: large;
@@ -742,12 +737,6 @@ body.error {
 .asset .icon-favorite { background-position: 0 -192px }
 
 .service-icon { background-repeat: no-repeat; }
-.icon-blog { background-image: url(images/icons/page_white_text.png); }
-.icon-status { background-image: url(images/icons/user.png); }
-.icon-video { background-image: url(images/icons/film.png); }
-.icon-comment { background-image: url(images/icons/comment.png); }
-.icon-follow { background-image: url(images/icons/group.png); }
-.icon-favorite { background-image: url(images/icons/heart.png); }
 
 .actions ul {
     position: relative;
@@ -787,7 +776,6 @@ button.button-delete {
 }
 .asset,
 .action {
-    /* padding-bottom: 25px; */
     border-bottom: 1px solid #ddd;
     border-right: 1px solid #ddd;
     background-color: #f6f6f2;
@@ -818,6 +806,10 @@ button.button-delete {
     margin-bottom: 10px;
 }
 
+.asset-header {
+    margin-top: 10px;
+    margin-right: 30px;
+}
 .asset-meta {
     font-size: 11px;
     color: #aaa;
@@ -832,49 +824,25 @@ button.button-delete {
 .user-profile .asset-meta {
     color: #555;
 }
-.icon-comment .asset-meta {
-    padding: 8px 10px 7px 32px;
-}
-.icon-link .asset-meta {
-    background-image: url(images/icons/link.png);
-}
-.icon-video .asset-meta {
-    background-image: url(images/icons/film.png);
-}
-.icon-video .asset-meta {
-    background-image: url(images/icons/film.png);
-}
-.icon-link a.link-arrow {
-    text-decoration: none;
-}
-.icon-link a.link-arrow:hover {
-    text-decoration: underline;
-}
 .asset .asset-meta .separator {
     display: none;
 }
-.asset .asset-meta .byline,
-.asset .asset-meta .trackback-count,
 .asset .asset-meta .comment-count {
-    margin: 8px 10px 7px 0;
+    margin-right: 10px;
+}
+.asset .asset-meta {
     line-height: 20px;
 }
-
-.asset .asset-meta .byline {
+.asset .asset-header .byline {
     display: block;
-    float: left;
-    font-style: italic;
 }
 .noscript .favorite-action {
     display: none !important;
 }
 
 .asset .asset-meta .comment-count,
-.asset .asset-meta .trackback-count,
-.asset .asset-meta .favorite-action,
 .asset .asset-meta .favorite-count {
     display: block;
-    float: left;
     padding-left: 20px;
     background-repeat: no-repeat;
     background-position: 10px 50%;
@@ -883,42 +851,40 @@ button.button-delete {
     line-height: 20px;
 }
 .asset .asset-meta .comment-count {
+    float: left;
     background: url(images/icons/comments.png) no-repeat 0 0;
 }
-.asset-meta .comment-count span,
-.asset-meta .trackback-count span {
+.asset-meta .comment-count span {
     display: none;
 }
 .user-profile .asset-meta .comment-count,
-.user-profile .asset-meta .trackback-count,
-.user-profile .asset-meta .favorite-action,
-.hover .asset-meta .comment-count,
-.hover .asset-meta .trackback-count,
-.hover .asset-meta .favorite-action {
+.hover .asset-meta .comment-count {
     visibility: visible;
 }
-.asset .asset-meta .favorite-action,
 .asset .asset-meta .favorite-count {
-    background: url(images/favorite-stars.gif) no-repeat right -48px; /*0;*/
+    background: url(images/favorite-stars.gif) no-repeat right -48px;
     margin: 5px 5px 0 0;
-    padding-right: 22px;
-    display: block;
-    text-align: right;
+    /* height of favorite image is 16px */
+    padding-top: 16px;
+    text-align: center;
     position: absolute;
     top: 0;
     right: 0;
-    line-height: 16px;
+    /* clips favorite sprite */
+    height: 0;
+    overflow: visible;
+    line-height: 18px;
 }
 .asset .asset-meta .favorite-action:hover {
-    background-position: right -32px; /*-16px;*/
+    background-position: right -32px;
     cursor: hand; /* HACK - ie */
     cursor: pointer;
 }
 .asset .asset-meta .scored {
-    background-position: right 0; /*-32px;*/
+    background-position: right 0;
 }
 .asset .asset-meta .scored:hover {
-    background-position: right 0; /*-48px;*/
+    background-position: right 0;
 }
 .asset-meta a {
     color: #aaa;
@@ -959,8 +925,7 @@ button.button-delete {
 .asset .asset-content p {
     margin-bottom: 10px;
 }
-#alpha .asset h1,
-#alpha .asset h2 {
+#alpha .asset .entry-title {
     font-size: 16px;
     margin: 0 0 5px 0;
     font-style: normal;
@@ -971,10 +936,11 @@ button.button-delete {
     text-transform: none;
     background: none;
 }
-.asset h2 a {
+.asset .entry-title a {
     text-decoration: none;
 }
 .asset .asset-content,
+.asset .asset-header,
 .asset .asset-meta {
     margin-left: 96px;
 }
@@ -988,8 +954,7 @@ button.button-delete {
 
 /* textpost */
 
-#alpha .asset h1,
-#alpha .asset h2 {
+.hfeed .asset .entry-title {
     font-size: 20px;
     margin-bottom: 10px;
     font-weight: normal;
@@ -997,32 +962,29 @@ button.button-delete {
 
 /* linkpost */
 
-#alpha .icon-link h2 {
+.hfeed .icon-link .entry-title {
+    font-size: 12px;
     margin-bottom: 2px;
 }
-#alpha .icon-link h1 a,
-#alpha .icon-link h2 a {
+.hfeed .icon-link .entry-title a {
     color: #069;
     font-weight: bold;
     padding-right: 15px;
     background: url(images/icons/external_link.gif) no-repeat right 40%;
 }
 
-/* videopost */
-
-.user-profile .asset.video .asset-content .embed {
-    margin-left: 0px;
-}
-.user-profile .asset.video .asset-content h2 {
-    height: inherit;
-}
-
 .user-profile .asset .asset-content,
+.user-profile .asset .asset-header,
 .user-profile .asset .asset-meta {
     margin-left: 35px !important;
 }
+.user-profile .asset .asset-header,
+.user-profile .asset .asset-header .byline .author,
 .user-profile .asset .userpic {
     display: none;
+}
+.user-profile .asset.elsewhere .asset-header {
+    display: block;
 }
 
 .comment .asset-content {
@@ -1330,7 +1292,6 @@ button.button-delete {
 
 /* Comments --------------------------------------------------------------- */
 
-.trackbacks,
 .comments, 
 #comments-list {
     clear: left;
@@ -1384,8 +1345,7 @@ button.button-delete {
 }
 
 .comments-open-header,
-.comments-header,
-.trackbacks-header {
+.comments-header {
     margin-bottom: 15px;
 }
 .comment .userpic {
@@ -1403,15 +1363,12 @@ button.button-delete {
     border: none;
     padding: 0;
 }
-.comment .asset-meta img {
-    display: none; /* hide the sign-in icon */
+.comment .asset-meta .commenter-profile {
+    display: none; /* hide the small userpic */
 }
 
 /* Comment Form ----------------------------------------------------------- */
 
-.comments-open-content {
-/*    margin: 0 35px;*/
-}
 #comment-greeting,
 #comments-form {
     margin-bottom: 10px;
