--- a/motion/templates/motion/base/bits/html_head.html
+++ b/motion/templates/motion/base/bits/html_head.html
@@ -46,6 +46,7 @@ user = {
 {% endif %}
 settings.upload_xhr_endpoint = '{{ upload_xhr_endpoint|escapejs }}';
 settings.comments_url = '{% url comments_url %}';
+settings.events_url = '{% url events_url %}';
 settings.favorite_url = '{% url favorite_url %}';
 /* ]]> */
 </script>
