Loading graphic for favoriting an item. Graphic borrowed from Twitter.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -888,6 +888,9 @@ button.button-delete {
     cursor: hand; /* HACK - ie */
     cursor: pointer;
 }
+.asset .asset-meta .loading {
+    background: url(images/icons/throbber.gif) no-repeat right 0;
+}
 .asset .asset-meta .scored {
     background-position: right 0;
 }
