--- a/motion/templates/motion/base/widgets/compose_user.html
+++ b/motion/templates/motion/base/widgets/compose_user.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load generic_filters %}
 <div id="friends">
     <div id="friends-innner">
         <div id="compose-userpic">
@@ -11,8 +12,8 @@
         <div id="user-meta" class="pkg">
             <div id="user-username">{{ user.display_name }}</div>
             <div id="user-data">
-                {% if user.location %}<p>{{ user.location }}</p>{% endif %}
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+                {% if user.location %}<p>{{ user.location|truncatechars:35 }}</p>{% endif %}
+                {% if user.about_me %}<p>{{ user.about_me|truncatechars:35 }}</p>{% endif %}
             </div>
         </div>
         {% with user as member %}
