--- a/motion/templates/motion/base/assets/body/link.html
+++ b/motion/templates/motion/base/assets/body/link.html
@@ -1,4 +1,4 @@
-{% extends "motion/assets/body/base.html" %}
+{% extends base|default:"motion/assets/body/base.html" %}
 {% load generic_filters %}
 
 {% block content %}
