--- a/motion/templates/motion/base/assets/body/audio.html
+++ b/motion/templates/motion/base/assets/body/audio.html
@@ -1,4 +1,4 @@
-{% extends "motion/assets/body/base.html" %}
+{% extends base|default:"motion/assets/body/base.html" %}
 
 {% block title %}{% endblock %}
 
