--- a/motion/templates/motion/base/assets/body/video.html
+++ b/motion/templates/motion/base/assets/body/video.html
@@ -1,7 +1,8 @@
-{% extends "motion/assets/body/base.html" %}
+{% extends base|default:"motion/assets/body/base.html" %}
+{% load typepad_filters %}
 
 {% block media %}
 <div class="embed">
-    {% autoescape off %}{{ entry.links.rel__enclosure.maxwidth__440.html }}{% endautoescape %}
+    {% autoescape off %}{% with entry|enclosurebymaxwidth:settings.video_max_width as video %}{{ video.html }}{% endwith %}{% endautoescape %}
 </div>
 {% endblock %}
