--- a/motion/templates/motion/base/assets/comment.html
+++ b/motion/templates/motion/base/assets/comment.html
@@ -1,4 +1,5 @@
 {% load date_filters %}
+{% load typepad_filters %}
 
 <div id="comment-{{ comment.url_id }}" class="comment {% ifequal entry.author.id comment.author.id %}comment-by-author{% endifequal %}">
 
@@ -23,7 +24,7 @@
             <span class="byline">
                 {% spaceless %}
                 <a class="commenter-profile" href="{{ comment.author.get_absolute_url }}">
-                    {% with comment.author.links.rel__avatar.width__16 as userpic %}
+                    {% with comment.author|userpicbywidth:16 as userpic %}
                     <img alt="Author Profile Page" src="{{ userpic.href }}" width="16" height="16" />
                     {% endwith %}
                 </a>
