Consistently include block.super in beta_widgets blocks (placed at bottom).

--- a/motion/templates/motion/base/events.html
+++ b/motion/templates/motion/base/events.html
@@ -13,6 +13,7 @@
     {% include "motion/widgets/members.html" %}
     {# include "motion/widgets/popular_entries.html" #}
     {# include "motion/widgets/gallery.html" #}
+{{ block.super }}
 {% endblock %}
 
 {% block content_head %}
