Wrapped some additional phrases; added missing h2 closing tag on 'sign in to comment' link; use photo_size parameter for member_widget_item template to select userpic.

--- a/motion/templates/motion/base/assets/body/photo.html
+++ b/motion/templates/motion/base/assets/body/photo.html
@@ -34,7 +34,7 @@
 
     {% ifnotequal entry.link thumbnail.href %}
     {# provide a link to the original resolution #}
-    <br /><small><a href="{{ entry.link }}">original</a></small>
+    <br /><small><a href="{{ entry.link }}">{% trans "original" %}</a></small>
     {% endifnotequal %}
     {% endwith %}
 </div>
