--- a/motion/templates/motion/base/bits/member_widget_item.html
+++ b/motion/templates/motion/base/bits/member_widget_item.html
@@ -4,7 +4,7 @@
     <div class="userpic">
         {% spaceless %}
         <a class="userpic-link source-user-avatar" href="{{ member.get_absolute_url }}">
-            {% with member|userpicbywidth:50 as userpic %}
+            {% with member|userpicbywidth:photo_size as userpic %}
             <img src="{{ userpic.href }}" alt="{{ member.display_name }}" title="{{ member.display_name }}" width="{{ photo_size }}" height="{{ photo_size }}" class="photo" />
             {% endwith %}
         </a>
