Use the png version of the background; smaller and more accurate color.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -19,7 +19,7 @@ body {
     font-size: 62.5%;
     font-family: "Helvetica Neue", Arial, Verdana;
     background-color: #00334c;
-    background-image: url(images/page-bg.jpg);
+    background-image: url(images/page-bg.png);
     background-repeat: repeat-x;
 }
 a:link,
