For the members view, verify that the post is for banning a user. Otherwise do some other default action (like post for the feautured member).

--- a/motion/templates/motion/base/widgets/admin.html
+++ b/motion/templates/motion/base/widgets/admin.html
@@ -7,7 +7,9 @@
         <p><a href="mailto:{{ member.email }}">{% blocktrans with member.display_name as name %}E-mail {{ name }}{% endblocktrans %}</a></p>
     {% endif %}
     {% if not member.is_superuser %}
-        <form id="ban-user-form" action="{{ request.path }}" method="post"></form>
+        <form id="ban-user-form" action="{{ request.path }}" method="post">
+            <input type="hidden" name="form-action" value="ban-user" />
+        </form>
         {% if is_blocked %}
             <p><a href="#" onclick="if (confirm(
                 {% blocktrans %}'Are you sure you want to un-ban this user? They will be able to rejoin this group.'{% endblocktrans %}))
